[project]
name = "koniwa"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
description = ""
authors = [{ author = "Yuta Hayashibe", email = "yuta@hayashibe.jp" }]
dependencies = ["pydantic>=2.9.2"]

[tool.uv]
dev-dependencies = ["ruff>=0.6.6", "yamllint>=1.35.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
exclude = ["**/third", ".venv", "**/node_modules", "**/__pycache__"]
reportPrivateImportUsage = "information"
reportUnusedVariable = "warning"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
