[project]
name = "koniwa"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
description = ""
authors = [{ author = "Yuta Hayashibe", email = "yuta@hayashibe.jp" }]
dependencies = ["pydantic>=2.9.2"]

[tool.uv]
dev-dependencies = ["ruff >=0.9.6", "yamllint >=1.35.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportDeprecated = "error"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
